<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/kylix"
                app:layout_constraintStart_toStartOf="@id/btn_change_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btn_change_photo"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/change_photo"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_semibold"
                android:backgroundTint="@color/purple_500"
                app:layout_constraintTop_toBottomOf="@id/iv_avatar"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/purple_200"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="@id/iv_avatar"
                app:layout_constraintStart_toEndOf="@id/btn_change_photo"
                app:layout_constraintBottom_toBottomOf="@id/btn_change_photo"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/sample_name"
                app:layout_constraintStart_toEndOf="@id/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/separator" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sample_email"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_change_profile_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_profile_container"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_change_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/change_profile"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/name"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_change_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/til_email"
                app:layout_constraintEnd_toEndOf="@id/til_email"
                app:layout_constraintTop_toBottomOf="@id/til_email">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"/>

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"/>

            </RadioGroup>

            <TextView
                android:id="@+id/tv_ability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/ability"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/rg_gender"
                app:layout_constraintTop_toBottomOf="@id/rg_gender"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_ability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_ability"
                app:layout_constraintStart_toStartOf="@id/rg_gender"
                app:layout_constraintEnd_toEndOf="@id/rg_gender">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_1"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_2"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/front_end"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_3"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_end"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_4"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_5"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_science"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_6"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blockchain"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_7"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ar"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_8"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vr"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_9"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_ux"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_10"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product"/>

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/purple_500"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/change_profile"
                app:layout_constraintEnd_toEndOf="@id/cg_ability"
                app:layout_constraintStart_toStartOf="@id/cg_ability"
                app:layout_constraintTop_toBottomOf="@id/cg_ability" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginHorizontal="24dp"
        android:text="@string/logout"
        android:textColor="@color/purple_500"
        android:fontFamily="@font/poppins_semibold"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_change_profile_container"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>