<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondFragment">

    <ImageView
        android:id="@+id/iv_onboard"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/onboard_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_onboard_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/onboard_title_content"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/iv_onboard"
        app:layout_constraintTop_toBottomOf="@id/iv_onboard"
        app:layout_constraintEnd_toEndOf="@id/iv_onboard"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_container_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        android:backgroundTint="@color/purple_700"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@id/tv_onboard_title"
        app:layout_constraintTop_toBottomOf="@id/tv_onboard_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_onboard_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_onboard_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/onboard_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cornerRadius="12dp"
                android:text="@string/login"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>